# mandelbrot

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: cpu.rs  gpu.rs  inner_app.rs  main.rs  shader.wgsl
